--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
      <th:block th:include="../templates/header"></th:block>
-    <title>SISADMRH-Listado de Capacitaciones</title>
+    <title>Listado de Capacitaciones</title>
 </head>
 <body>
     <script> Textheader('pnt_ceca',document.title);</script>
@@ -26,7 +26,7 @@
                 <th>Categoría</th>
                 <th>Descripción Categoría</th>
                 <th>Departamento Responsable</th>
-                <th>Nº horas</th>
+                <th>Nº Horas</th>
                 <th>Nº Días</th>
                 <th>Patrocinador</th>
                 <th>Tipo de Evento</th>
