--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -18,9 +18,9 @@
                 <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
                     <thead>
                         <tr>
-                            <th>Codigo de costo de Capacitacion</th>
-                            <th>Costo Persona</th>
-                            <th>Numero de Personas</th>
+                            <th>Código de costo de Capacitacion</th>
+                            <th>Costo por Persona</th>
+                            <th>Número de Personas</th>
                             <th>Costo de Capacitador</th>
                             <th>Nombre Capacitación</th>
                             <th></th>
