--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Cantidad de Personas:</label>
+                            <label class="col-sm-5 control-label">Número de Personas:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${costocapacitacion.numeropersona}">Cantidad de Personas</p>
                             </div>
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Codigo de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Nombre de Capacitación:</label>
                             <div class="col-sm-7">
                                <p class="form-control-static" th:text="${costocapacitacion.codigocapacitacion.nombrecapacitacion}">codigo de capacitacion</p>
                                 <!--<p class="form-control-static" th:text="${costocapacitacion.codigocapacitacion.codigocapacitacion}">codigo de capacitacion</p>-->
