--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -60,9 +60,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="form-control" required="true" size="100"maxlength="100" th:field="*{desripcioncuadrodirectivo}"/>
                 </div>
                 <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('area')" onmouseout ="javascript:ocultarAyuda('area')">a</a></b>
+                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('descc')" onmouseout ="javascript:ocultarAyuda('descc')">a</a></b>
 
-                                <span class="popuptext" id="area">Ingrese una Descripcion del cuadro Directivo. Solo se permiten 100 caracteres!</span>
+                                <span class="popuptext" id="descc">Ingrese una Descripcion del cuadro Directivo. Solo se permiten 100 caracteres!</span>
                             </div>
             </div>
             <div class="form-group">
