--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>ASingar asistencias a empleados</title>
+    <title>Asingnar asistencias a empleados</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -27,7 +27,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <!--<table class="table table-striped">-->
             <tr>
                 <th>Nombre de empleado</th>
-                <th>Capacitacion</th>
+                <th>Capacitación</th>
                
                 
             </tr>
@@ -41,6 +41,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
     </div>
 </body
+
 </script>
     <script th:inline="javascript">
            $(document).ready(function () {
