--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -18,11 +18,11 @@
              <thead>
             <tr>
                 <th>Centro Educativo</th>
-                <th>Años aprobados</th>
+                <th>Años Aprobados</th>
                   <th>Estudios realizados</th>
                  <th>Finalizado</th>
-                  <th>titulo obtenido</th>
-                   <th>País del nivel escolar</th>
+                  <th>Titulo Obtenido</th>
+                   <th>País del Nivel Escolar</th>
                    <th>Fecha Desde</th>
                    <th>Fecha Hasta</th>
                  <th></th>
