--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -42,23 +42,24 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha de inicio de beneficio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechainiciobeneficio}">descripcion</p>
+                         <p class="form-control-static" th:text="${#calendars.format(beneficio.fechainiciobeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha fin de beneficio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechafinalizarbeneficio}">descripcion</p>
+                         <p class="form-control-static" th:text="${#calendars.format(beneficio.fechafinalizarbeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
                 </div>
                 
             </form>
-             <div class="col-md-12">
+            <div class="col-md-12">
                     <div class="row" align="center">
- <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/beneficios/}">Reg</a></button>
+                       <a href="#" th:href="@{/beneficios/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                     </div>
                 </div>
+            
     </div>
 </div>
     </div>
