--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -46,14 +46,14 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Desripcion Categoría:</label>
+                            <label class="col-sm-5 control-label">Desripción Categoría:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.descripcioncategoria}">Descripción Categoría</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Departametno Responsable:</label>
+                            <label class="col-sm-5 control-label">Departamento Responsable:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.departamentoresponsable}">Departamento Responsable</p>
                             </div>
