--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -38,14 +38,14 @@
                                     </div>
                                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Area:</label>
+                    <label class="col-sm-2 control-label">Área:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.area}">Area</p>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Descripcion:</label>
+                    <label class="col-sm-2 control-label">Descripción:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripción</p>
                     </div>
@@ -55,13 +55,13 @@
               
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Presentación:</label>
+                    <label class="col-sm-2 control-label">Fecha  Desde:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
                 </div>
  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Presentación:</label>
+                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacionhasta, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
