--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Formacion Academica</title>
+    <title>Formación Academica</title>
   <th:block th:include="../templates/header"></th:block>
  
   </head>
@@ -30,18 +30,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 
 <div class="form-group">
-                <label class="col-sm-2 control-label">Estudios realizados:(*)</label>
+                <label class="col-sm-2 control-label">Estudios Realizados:(*)</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{estudiorealizado}"/> 
                 </div>
                      <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('estudiosrealizados')" onmouseout ="javascript:ocultarAyuda('estudiosrealizados')">a</a></b>
                         
-                        <span class="popuptext" id="estudiosrealizados">Ingrese sus estudios realizados.Solo se permiten maximo 100 caracteres!</span>
+                        <span class="popuptext" id="estudiosrealizados">Ingrese sus Estudios Realizados.Solo se permiten maximo 100 caracteres!</span>
                     </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Centro educativo:(*)</label>
+                <label class="col-sm-2 control-label">Nombre de Centro Educativo:(*)</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{centroeducativo}"/>
                 </div>
@@ -52,18 +52,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Años aprobados:</label>
+                <label class="col-sm-2 control-label">Años Aprobados(*):</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control numeros" maxlength="2"th:field="*{aniosaprobados}"/>
                 </div>
                   <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('aprobados')" anios ="javascript:ocultarAyuda('aprobados')">a</a></b>
                         
-                        <span class="popuptext" id="aprobados">Ingrese los Años aprobados en el nivel escolar.Solo se permiten la combinacion de los digitos del 0 al 9!</span>
+                        <span class="popuptext" id="aprobados">Ingrese los Años Aprobados en el Nivel Escolar.Solo se permiten la combinacion de los digitos del 0 al 9!</span>
                     </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-2 control-label">País Nivel escolaridad:</label>
+                <label class="col-sm-2 control-label">País Nivel Escolaridad(*):</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{paisnivelescolaridad}"/>
                 </div>
@@ -75,7 +75,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha desde nivel escolar:</label>
+                <label class="col-sm-2 control-label">Fecha Desde de Nivel Escolar(*):</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control  fecha_format" id="fdesde" required="true" th:field="*{fechadesdenivelescolaridad}"onchange="isDat(this.value,'fdesde');Fechas(this.value,$('#fhasta').val().toString(),'fdesde','fhasta')"/>
                 </div>
@@ -86,7 +86,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
+                <label class="col-sm-2 control-label">Fecha Hasta de Nivel Escolaridad(*):</label>
                 <div class="col-sm-2">                                                                                        
                     <input type="text" class="form-control fecha_format" id="fhasta" th:field="*{fechahastanivelescolaridad}" onchange="isDat(this.value,'fhasta');Fechas($('#fdesde').val().toString(),this.value,'fdesde','fhasta')"/>
                 </div>
@@ -97,7 +97,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-2 control-label">Finalizado:</label>
+                <label class="col-sm-2 control-label">Finalizado(*):</label>
                 <div class="col-sm-2">
                     <select class="form-control"  required="true" name="finalizado" >
                         <option>Si</option>
@@ -115,7 +115,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>
             
              <div class="form-group">
-                <label class="col-sm-2 control-label">Titulo Obtenido:</label>
+                <label class="col-sm-2 control-label">Titulo Obtenido(*):</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{tituloobtenido}"/>
                 </div>
