--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
@@ -24,115 +24,115 @@ and c.fechapresentacionhasta <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 		<band/>
 	</background>
 	<pageHeader>
-		<band height="114">
+		<band height="92">
 			<textField>
-				<reportElement x="428" y="93" width="55" height="20" uuid="f527d995-8ccf-4512-9ab5-631b30b86807"/>
+				<reportElement x="428" y="72" width="55" height="20" uuid="f527d995-8ccf-4512-9ab5-631b30b86807"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="158" y="50" width="265" height="20" uuid="38761961-bd1a-4643-958b-8a26ea58b90f"/>
+				<reportElement x="158" y="29" width="265" height="20" uuid="38761961-bd1a-4643-958b-8a26ea58b90f"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="48" y="93" width="114" height="20" uuid="f65ed748-3a02-4fc8-8f65-27323ad3873c"/>
+				<reportElement x="48" y="72" width="114" height="20" uuid="f65ed748-3a02-4fc8-8f65-27323ad3873c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="113" y="93" width="70" height="20" uuid="c5a2912c-7e6a-44af-ad30-b78eb20af1dc"/>
+				<reportElement x="113" y="72" width="70" height="20" uuid="c5a2912c-7e6a-44af-ad30-b78eb20af1dc"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="158" y="34" width="265" height="20" uuid="e5c92d17-5b09-4a30-93d0-8e8dc2c7255a"/>
+				<reportElement x="158" y="13" width="265" height="20" uuid="e5c92d17-5b09-4a30-93d0-8e8dc2c7255a"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="336" y="93" width="62" height="20" uuid="207a4689-d92f-4ab5-b47d-f53e15c29902"/>
+				<reportElement x="336" y="72" width="62" height="20" uuid="207a4689-d92f-4ab5-b47d-f53e15c29902"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="35" y="37" width="80" height="70" uuid="ac754659-06fc-46ad-b9a9-be7fb7dae71f"/>
+				<reportElement x="48" y="7" width="80" height="70" uuid="ac754659-06fc-46ad-b9a9-be7fb7dae71f"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="48" y="80" width="76" height="21" uuid="80a662ed-485e-4d08-8c63-57dbd3d6174d"/>
+				<reportElement x="48" y="59" width="76" height="21" uuid="80a662ed-485e-4d08-8c63-57dbd3d6174d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_emar]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="242" y="93" width="67" height="20" uuid="011d235e-f3e1-46a4-a969-0b60fd7fbc0a"/>
+				<reportElement x="242" y="72" width="67" height="20" uuid="011d235e-f3e1-46a4-a969-0b60fd7fbc0a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="470" y="79" width="76" height="16" uuid="cba68cfe-0fda-4624-b4d6-cf9ea56312d4"/>
+				<reportElement x="470" y="58" width="76" height="16" uuid="cba68cfe-0fda-4624-b4d6-cf9ea56312d4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="435" y="28" width="70" height="70" uuid="25d8bb8d-122c-4803-a5b2-ac1d42ce47f3"/>
+				<reportElement x="435" y="7" width="70" height="70" uuid="25d8bb8d-122c-4803-a5b2-ac1d42ce47f3"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="435" y="79" width="39" height="20" uuid="70f4e1a6-80b5-4356-9726-942779681ec6"/>
+				<reportElement x="435" y="58" width="39" height="20" uuid="70f4e1a6-80b5-4356-9726-942779681ec6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="213" y="93" width="39" height="20" uuid="c3163e4f-8893-42e2-80b7-e280be9da90e"/>
+				<reportElement x="213" y="72" width="39" height="20" uuid="c3163e4f-8893-42e2-80b7-e280be9da90e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="158" y="66" width="265" height="20" uuid="e13267b6-aef5-459a-9d97-b873f7080724"/>
+				<reportElement x="158" y="45" width="265" height="20" uuid="e13267b6-aef5-459a-9d97-b873f7080724"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="162" y="79" width="265" height="20" uuid="bdd5876e-177e-424a-8d2e-12ad581b6d02"/>
+				<reportElement x="162" y="58" width="265" height="20" uuid="bdd5876e-177e-424a-8d2e-12ad581b6d02"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Reporte de Personal Exonerado de Marcación]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="485" y="93" width="26" height="20" uuid="25e42ee9-79d7-4280-b57c-2e20a0305c93"/>
+				<reportElement x="485" y="72" width="26" height="20" uuid="25e42ee9-79d7-4280-b57c-2e20a0305c93"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="309" y="93" width="39" height="20" uuid="445255d9-3faf-49e0-9e23-2c8e058c3760"/>
+				<reportElement x="309" y="72" width="39" height="20" uuid="445255d9-3faf-49e0-9e23-2c8e058c3760"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
